--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -36,10 +36,10 @@
             }
          },
          "about":{
-            "type":"about",
+            "type":"about"
          },
          "newsletter":{
-            "type":"newsletter",
+            "type":"newsletter"
          },
          "featured-collections":{
             "type":"collection",
