--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -62,7 +62,7 @@
       "about",
       "newsletter",
       "featured-home",
-      "featured-collection"
+      "featured-collections"
     ]
   },
   "presets":{
@@ -130,7 +130,7 @@
         "about",
         "newsletter",
         "featured-home",
-        "featured-collection"
+        "featured-collections"
       ]
     }
   }
